# tempTorch

./: README.md  pack_name.ipynb  packname.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
pack_name/: config.py  domain.py  main_inference.py  main_train.py  model.py
pack_name/data/: datamodule.py  dataset.py  domain.py  preprocessing.py
pack_name/networks/: child.py  network.py
packname/: config.py  domain.py  main_train.py  model.py
packname/data/: corpus.py  datamodule.py  dataset.py  dataset_utils.py  domain.py  transform.py
packname/networks/: child.py  network.py
