[tool.poetry]
name = "packname"
version = "0.0.0"
description = "Description of this project"
authors = ["user_name"]
readme = "README.md"
repository = "https://github.com/user_name/repo_name"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
lightning = "^2.0.0"
fsspec = {version = "^2023.1", extras = ["http", "s3"]}
boto3 = "^1.16.18"
tqdm = "^4.0"
omegaconf = "^2.3.0"
speechcorpusy = {git = "https://github.com/tarepan/speechcorpusy.git", rev = "main"}
speechdatasety = {git = "https://github.com/tarepan/speechdatasety.git", rev = "main"}
configen = {git = "https://github.com/tarepan/configen.git", rev = "main"}
lightlightning = {git = "https://github.com/tarepan/lightlightning.git", rev = "main"}
## Dependencies for Audio
# pyloudnorm = "^0.1.0"
# librosa = "^0.8.0"
## Poetry is not good for version control of PyTorch (it has many many variants for a version, so poetry become confused)
## torch = "2.0.0"
## torchaudio = "2.0.1"

[tool.poetry.dev-dependencies]
types-tqdm = "^4.64.1"
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
  "pointless-string-statement",
]